--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "@types/node": "^16.11.27",
     "@types/react": "^18.0.5",
     "@types/react-dom": "^18.0.0",
+    "date-fns": "^2.28.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-redux": "^7.2.8",
     "react-scripts": "5.0.1",
+    "react-scroll": "^1.8.7",
     "redux": "^4.1.2",
     "redux-thunk": "^2.4.1",
     "typescript": "^4.6.3",
@@ -46,5 +48,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react-scroll": "^1.8.3"
   }
 }
